# declinometer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: detection.md
examples/: README.md  outputs_v1.jsonl  outputs_v2.jsonl  version_watch.py
scripts/: smoke.sh
src/declinometer/: __init__.py  __main__.py  aggregate.py  cli.py  detector.py  diffing.py  lexicon.py  normalize.py  records.py  report.py  store.py
tests/: conftest.py  test_aggregate.py  test_cli.py  test_detector.py  test_diffing.py  test_examples.py  test_lexicon.py  test_normalize.py  test_records.py  test_report.py  test_store.py
