[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "declinometer"
version = "0.1.0"
description = "Deterministic refusal and hedging detector for LLM outputs: pattern-and-lexicon scoring, versioned refusal-rate tracking, regression diffs — no judge model required."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["llm", "refusal", "hedging", "evaluation", "regression-testing", "prompt-engineering", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
declinometer = "declinometer.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/declinometer"
Repository = "https://github.com/JaydenCJ/declinometer"
Issues = "https://github.com/JaydenCJ/declinometer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
